fix testimonial gradient on safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -479,7 +479,7 @@ button {
     right: 0;
     width: 30%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #9C69E2 90.25%);
+    background: linear-gradient(90deg, rgba(156,105, 226, 0) 0%, #9C69E2 90.25%);
     transition: opacity 1.5s ease;
   }
   &.remove_gradient::after {
